<resources>
    <string name="app_name">PEAM</string>
    <string name="todo">TODO</string>
    <string name="my_trips">My Trips</string>
    <string name="offers">Offers</string>
    <string name="book_a_trip">Book A Trip</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="app_name_short">PEAM</string>
    <string name="app_full_name">Peam Mobility</string>
    <string name="app_slogan">Everywhere you want</string>
    <string name="user_icon">user icon</string>
    <string name="dummy_user_name">Peter Muraya</string>
    <string name="navigation_open_drawer">Open navigation drawer</string>
    <string name="navigation_close_drawer">Close navigation drawer</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="trip_to">Trip to?</string>
    <string name="apply">APPLY</string>
    <string name="sample_offer">50% OFF, for 100km plus trips</string>
    <string name="sample_offer_description">Travel further, conveniently and cheaply…</string>
    <string name="sample_bookmarked_location">Kencom</string>
    <string name="sample_bookmark_description">Tom Mboya Street, Nairobi</string>
    <string name="sample_kiambu_golf">Kiambu Golf</string>
    <string name="sample_kiambu_golf_description">Kiambu Golf Course, Kiambu</string>
    <string name="trip_destination">Trip Destination?</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="terms_and_conditions_statement"><![CDATA[Registering and/or logging in to PEAM means that you have agreed to our <b><u>terms & conditions</u></b> and <b><u>privacy policy</u></b>]]></string>
    <string name="underline_sample">This is an &lt;u&gt;underline&lt;/u&gt;.</string>
    <string name="your_name">Your name</string>
    <string name="full_name">Full name</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="valid_email">Valid email</string>
    <string name="valid_email_optional">Valid email (optional)</string>
    <string name="ok">Ok</string>
    <string name="title_location_permission"><![CDATA[Allow <b>Location App</b> to access this device\'s location <b>all the time</b>?]]></string>
    <string name="text_location_permission">App currently can access location only while you\'re using the app</string>
    <string name="invalid_field">This field is required</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="alert">Alert!!!</string>
    <string name="complete">Complete</string>
    <string name="back">Back</string>
    <string name="update_required">Update Required</string>
    <string name="update_app">Update APP</string>
    <string name="new_here_create_an_account">New here? Create an account</string>
    <string name="user_information">My Details</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="last_login">Last Login</string>
    <string name="sth_went_wrong">Something went wrong, try again</string>
    <string name="member_since">Member since</string>
    <string name="trip_details">Trip Details</string>
    <string name="distance">Distance</string>
    <string name="_10_km">10 Km</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="_1_hr">1 Hr</string>
    <string name="total_cost">Total Cost</string>
    <string name="_3_000">3,000/=</string>
    <string name="cancel">Cancel</string>
    <string name="request_trip">Request Trip</string>
    <string name="peam_4">Peam 4</string>
    <string name="peam_cab">Peam Cab</string>
    <string name="_4">4</string>
    <string name="capacity">Capacity</string>
    <string name="peam_2">Peam 2</string>
    <string name="_2">2</string>
    <string name="peam">PEAM</string>
    <string name="book_for_later">Book For Later</string>
    <string name="ksh_1_000">Ksh 1,000</string>
    <string name="clear">Clear</string>
    <string name="nairobi_kenya">Nairobi, Kenya</string>
    <string name="exit">Exit</string>
    <string name="confirm_trip">Confirm Trip</string>
    <string name="trip_time">Trip Time</string>
    <string name="destination">Destination</string>
    <string name="ruaka_square">Ruaka Square</string>
    <string name="two_rivers_shopping_mall">Two rivers shopping mall</string>
    <string name="active_trip">Active Trip</string>
    <string name="status">Status</string>
    <string name="active_status">Active Status</string>
    <string name="requested_trip">Requested Trip</string>
    <string name="pick_up">Pick Up</string>
    <string name="driver">Driver</string>
    <string name="fare">Fare</string>
    <string name="home">Home</string>
    <string name="date">09 Sep 2023</string>
    <string name="status_sample">Cancelled</string>
    <string name="cab_type">Cab Type</string>
    <string name="driver_phone">Driver\'s Phonenumber</string>
    <string name="where_to">Where to?</string>
    <string name="i_agree">I Agree</string>
    <string name="message">message</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ride_with_peter">Ride With Peter</string>
    <string name="additional_text">Additional ride details can be found in your email receipt</string>
    <string name="payment">Payments</string>
    <!--    <string name="GOOGLE_API_KEY">AIzaSyABLWkA85cwC3Jsm8KGZxa_FzGXtDeqeHs</string>-->
</resources>