<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_book_a_trip"
            android:icon="@drawable/ic_book_taxi"
            android:title="@string/book_a_trip" />
        <item
            android:id="@+id/nav_my_trips"
            android:icon="@drawable/ic_my_trips"
            android:title="@string/my_trips" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offers"
            android:title="@string/offers" />
    </group>

    <item android:title="@string/support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/help" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_help"
                    android:title="@string/my_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>