<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_180"
    android:background="@color/secondary"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        android:background="@drawable/navigation_header_background"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_10"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <!--    <TextView-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/app_full_name"-->
        <!--        android:textColor="@color/white"-->
        <!--        android:textSize="@dimen/sp_24"-->
        <!--        android:textStyle="bold" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/ic_user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_user_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_light"
                    android:elevation="@dimen/dp_5"
                    android:text="@string/edit_my_profile"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>