<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="2"
    tools:context=".auth.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_rowWeight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/your_phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:prefixText="+254"
                app:prefixTextColor="@color/primary"
                android:paddingTop="@dimen/dp_10"
                app:startIconDrawable="@drawable/kenya"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:padding="14dp"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/baloo"
                    tools:ignore="KeyboardInaccessibleWidget" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/btn_light_lg"
                android:text="@string/verify"
                android:textAllCaps="true"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/l_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:text="@string/new_here_create_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_rowWeight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/taxi_advert"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"/>
            <TextView
                android:id="@+id/l_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions_statement"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_20"
                android:textSize="@dimen/sp_10"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:gravity="center"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>