<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical"
    android:rowCount="4"
    tools:context=".auth.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:elevation="@dimen/dp_10"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/r_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/create_account"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/sp_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/your_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/customTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:prefixTextColor="@color/primary"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/r_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="14dp"
                        android:textColor="@color/primary"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/customTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:counterEnabled="true"
                    app:counterMaxLength="9"
                    app:prefixText="+254"
                    app:prefixTextColor="@color/primary"
                    app:startIconDrawable="@drawable/kenya"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/r_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:inputType="phone"
                        android:maxLength="9"
                        android:maxLines="1"
                        android:padding="14dp"
                        android:textColor="@color/primary"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/customTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valid_email_optional"
                    app:prefixTextColor="@color/primary"
                    app:startIconDrawable="@drawable/mail"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/r_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="14dp"
                        android:textColor="@color/primary"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registerBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/btn_light_lg"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/create_account"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/taxi_advert" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/r_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_20"
        android:text="@string/terms_and_conditions_statement"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_10"
        tools:ignore="RtlSymmetry" />
</RelativeLayout>