<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginEnd="@dimen/dp_10"
    android:layout_marginBottom="@dimen/dp_5"
    android:clickable="false"
    android:elevation="@dimen/dp_10"
    android:focusable="false"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_10"
    android:background="@color/float_transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_10">

        <RelativeLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bc_titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/alert"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:orientation="vertical">

            <!--            Pin-->
            <TextView
                android:id="@+id/bc_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/todo"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/line_bg_color"
                android:backgroundTint="@color/line_bg_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bc_confirm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:backgroundTint="@color/primary"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/complete"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    app:cornerRadius="@dimen/dp_10" />

                <Button
                    android:id="@+id/bc_personal_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:backgroundTint="@color/secondary"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    app:cornerRadius="@dimen/dp_10"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>